--- a/★★★★★/Info.plist
+++ b/★★★★★/Info.plist
@@ -65,6 +65,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>&quot;TEST STRING&gt;&gt;&gt; NEEDS TO BE CHANGED&quot;</string>
+	<string>This allows nearby users to find each other.</string>
 </dict>
 </plist>
